css/index.css
#header, h1, h2, h3, h4 {
  font-family: 'Arima Madurai', cursive;
}

h5, h6 {
  font-weight: bold;
}

h1 a {
  text-decoration: none;
}

a {
  color: black;
}

sup {
  font-weight: bold;
}

sup a {
  text-decoration: none;
}

ol {
  margin-left: 4.33333333333%;
}

nav {
  background-color: white;
  border-top: 4px solid black;
  border-bottom: 2px solid #333333;
}

nav ul {
  width: 80%;
  max-width: 960px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  list-style-type: none;
  padding: .5em;
  margin: 0px auto;
}

nav li {
  font-size: 1.2em;
  padding-right: 2em;
  margin-bottom: 0px;
}

nav a {
  text-decoration: none;
}

#header, #footer {
  background-color: #cccccc;
}

#footer {
  position: fixed;
  width: 100%;
  bottom: 0px;
}

#header div, #footer div {
  margin: 0 auto;
  max-width: 960px;
  width: 80%;
  padding-top: .5em;
  padding-bottom: .5em;
}

#header {
  font-size: 4em;
}

#header a {
  text-decoration: none;
}

#footer p {
  margin-bottom: .5em;
}

p, li {
  font: caption;
}

#coming-soon {
  width: 75%;
}

html {
  background-color: #e5e5e5;
}

thead {
  font-weight: bold;
}

td, th {
  text-align: center;
}

table#of-contents td, table#of-contents th{
  text-align: left;
}


.book-header {
  background-color: #888888;
  border-radius: 5px;
  border-bottom: 2px solid #333333;
  border-top: 2px solid #333333;
  padding:  0em .5em;
}
.book-header p {
  font-weight: bold;
  color: white;
}

.tablish .book {
  background-color: #f8f8f8;
  border-bottom: 2px solid #333333;
  border-top: 2px solid #333333;
  border-radius: 5px;
  margin-top: .5em;
  padding: .5em;
}

.tablish .title {
  font-weight: bold;
}

@media (max-width: 800px) {
  table, tbody, td, tr {
    display: block;
    margin-left: 0px;
    margin-right: 0px;
  }

  p, li {
    text-align:justify;
    font-size: 1.5rem;
  }

  th, thead {
    display: none;
  }

  .homepage td:nth-child(3n +1) {
    border-top: 4px solid black;
    background-color: #bbbbbb
  }
  img {
    max-width: 100%;
  }
  #header {
    font-size: 2em;
  }

  .tablish .book-header {
    display: none;
  }

  .tablish p {
    text-align: center;
  }

  nav li {
    font-size: 1em;
  }
  nav {
    margin-bottom: .5em;
  }

}
@media (min-width: 700px) {
  .container {
    margin-bottom: 1em;
  }
  #header {
    font-size: 3em;
  }
  td .date {
    max-width: 90px;
  }
  table .title {
    max-width: 300px;
    min-width: 200px;
  }
  table#results img {
    max-width: 100%;
  }
  table#results td {
    max-width: 30%;
  }


  .book, .book-header {
    display: flex;
    justify-content: flex-start;
    align-items: center;
  }

  .book-header {
    /*text-align: center;*/
  }

  .book p, .book-header p {
    margin-bottom: 0;
    padding: 1em;
  }


  .book .title, .book-header .title {
    order: 1;
    min-width: 150px;
    max-width: 150px;
    font-weight: bold;
  }
  .book .rating, .book-header .rating {
    order: 2;
    max-width: 90px;
    min-width: 90px;
  }
  .book .recommendation, .book-header .recommendation {
    order: 3;
    width: 100%
  }
}

/*table .summary {
  max-width: 400px;
}*/
table {
  margin: 0px auto;
  margin-top: 1em;
  margin-bottom: 1em;
}

td {
  border: 2px solid #222222;
}

.blog-image {
  border: 4px solid #999999;
  margin: 10px;
  background-color: #f8f8f8;
  border-radius: 5px;
}

.blog-image img {
  border-bottom: 2px solid #999999;
  background-color: white;
  max-width: 100%;
}

.blog-image p#subtext {
  margin: 5px;
  font-size: 12px;
}

ul.footnotes {
  list-style-type: none;
}

p.date {
  font-family: monospace;
}

#macmed {
  padding-top: .5em;
  padding-bottom: .5em;
}

.quotation {
  margin-left: 4.33333333333%;
  border-left: 4px solid #999999;
  max-width: 80%;
  font-style: italic;
  padding-left: 1em;
}

